--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,10 @@
 	"content_scripts": [
 		{
 		  "matches": ["*://*/**"],
-		  "js": ["/script/myscript.js"]
+		  "js": [
+			"/script/myscript.js",
+			"/script/select.js"
+		  ]
 		}
 	],
 
