--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,7 @@
 		{
 		  "matches": ["*://*/**"],
 		  "js": [
-			"/script/myscript.js",
-			"/script/select.js"
+			"/script/myscript.js"
 		  ]
 		}
 	],
