--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name":"Table Manners",
-    "description":"Manner your tables.",
+    "description":"Manner your tables. —— by kingcos.me",
     "version":"1.0",
     "manifest_version":3,
     "background":{
