--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name":"Table Manners",
-    "description":"Filter your tables. —— by kingcos.me",
+    "description":"Filter your <table>s. —— by kingcos.me",
     "version":"1.0",
     "manifest_version":3,
     "background":{
@@ -28,16 +28,16 @@
 	"action": {
 		"default_popup": "popup.html",
 		"default_icon": {
-		  "16": "/images/get_started16.png",
-		  "32": "/images/get_started32.png",
-		  "48": "/images/get_started48.png",
-		  "128": "/images/get_started128.png"
+		  "16": "/images/tablemanners-16.png",
+		  "32": "/images/tablemanners-32.png",
+		  "48": "/images/tablemanners-48.png",
+		  "128": "/images/tablemanners-128.png"
 		}
 	},
 	"icons": {
-	  "16": "/images/get_started16.png",
-	  "32": "/images/get_started32.png",
-	  "48": "/images/get_started48.png",
-	  "128": "/images/get_started128.png"
+ 	  "16": "/images/tablemanners-16.png",
+	  "32": "/images/tablemanners-32.png",
+	  "48": "/images/tablemanners-48.png",
+	  "128": "/images/tablemanners-128.png"
 	}
 }
