Add screenshot & removed useless permissions

--- a/manifest.json
+++ b/manifest.json
@@ -10,11 +10,7 @@
 		"*://*/"
 	],
 	"permissions": [
-		"storage",
-		"activeTab",
-		"scripting",
-		"tabs",
-		"contextMenus"
+		"storage"
 	],
 	"content_scripts": [
 		{
